--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="vip_dis">VIP Discount : </string>
     <string name="maroof">Maroof</string>
     <string name="wish">Wishlist</string>
 
