--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -64,7 +64,7 @@
     <string name="rating">التقييم والمراجعات</string>
     <string name="nav_home">تسوق الآن </string>
     <string name="nav_profile">الملف الشخصي\n</string>
-    <string name="nav_order">طلباتي\n</string>
+    <string name="nav_order">طلباتي</string>
     <string name="nav_order_note">مذكرة الطلب(اختياري):\n</string>
     <string name="nav_note">أدخل أي ملاحظة إضافية (اختياري)\n</string>
     <string name="tv_toolbar_name">المكافآت\n</string>
