--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,7 +149,7 @@
     <string name="feedback" translatable="false">Feedback</string>
     <string name="store" translatable="false">Store Pick Up</string>
     <string name="confirm_order" translatable="false">Confirm</string>
-    <string name="pickup" translatable="false">PickUp / COD</string>
+    <string name="pickup" translatable="false">Cash On Delivery</string>
     <string name="cash" translatable="false">Cash On Delivery</string>
     <!-- fragment_cart.xml -->
     <string name="tv_cart_title">Cart</string>
@@ -295,7 +295,7 @@
     <string name="new_password">New Password (Required)</string>
     <string name="confirm_password">Confirm Password (Required)</string>
     <string name="password_not_same">Confirm Password and New Password not same.</string>
-    <string name="delivery_charge" translatable="false">Delivery Charges.:\u0020</string>
+    <string name="delivery_charge">Delivery Charges.:\u0020</string>
     <string name="amount" translatable="false">Amount:\u0020</string>
     <string name="search_here">Search here...</string>
     <string name="total_amount">Total Amount:\u0020</string>
