--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="related">Related Products</string>
 
+    <string name="onlyforpreorder">Its only select for pre orders</string>
     <string name="btn_Register">سجل</string>
     <string name="or">-OR-</string>
     <string name="go_cart">Go To Cart</string>
