--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="onlyforpreorder">Its only select for pre orders</string>
+
+
     <string name="related">Related Products</string>
 
     <string name="or">-OR-</string>
