--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="nocharges">Free Shipping over 500 SAR</string>
+
     <string name="onlyforpreorder">Its only select for pre orders</string>
 
 
