--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,6 +3,7 @@
     <string name="related">Related Products</string>
     <string name="nocharges">Free Shipping over 500 SAR</string>
 
+    <string name="notavailabe">Not Available</string>
     <string name="onlyforpreorder">Its only select for pre orders</string>
     <string name="btn_Register">سجل</string>
     <string name="or">-OR-</string>
