--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -55,9 +55,9 @@
     <string name="popular">Popular products</string>
 
     <string name="mblnumber">Enter your mobile number</string>
-    <string name="app_name">J6</string>
-    <string name="name">GoGrocer</string>
-    <string name="currency"> ر.س</string>
+    <string name="app_name">J6 Stores</string>
+    <string name="name">J6 Stores</string>
+    <string name="currency">SAR</string>
     <string name="title_activity_main">Actividad principal</string>
     <string name="txtCredits"><a href="http://www.google.com">Google</a></string>
     <string name="guest">Guest</string>
