--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="add_marker">تعيين علامة للموقع</string>
+    <string name="select_color">إختر لون</string>
+    <string name="select_size">أختر الحجم</string>
 
-<string name="tv_note">
+    <string name="add_marker">تعيين علامة للموقع</string>
+    <string name="tv_note">
         *ملاحظة: سعر ومدة التوصيل تعتمد على عدد وجاهزية المتاجر.
     </string>
     <string name="tv_pro_add_address">أضف عنوان التسليم</string>
