--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="select_color">Select Color</string>
+    <string name="select_size">Select Size</string>
 
     <string name="add_marker">Set Marker For location</string>
 
