--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="select_color">Select Color</string>
+    <string name="select_size">Select Size</string>
+
     <string name="add_marker">Set Marker For location</string>
-
-
     <string name="tv_note">*Note: The shipping price and time depend on the stores numbers and confirmations.
     </string>
 
