--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="loading">Loading…</string>
+
+    <string name="select_quan">Select Quantity</string>
     <string name="select_color">Select Color</string>
     <string name="select_size">Select Size</string>
-
     <string name="add_marker">Set Marker For location</string>
     <string name="tv_note">*Note: The shipping price and time depend on the stores numbers and confirmations.
     </string>
 
     <string name="tv_pro_add_address">Add Delivery Address</string>
-
     <string name="musthavereedem">You must have 300 points to redeem</string>
-
     <string name="notavailabe">Not Available</string>
-
     <string name="nocharges">Free Shipping over 500 SAR</string>
-
     <string name="onlyforpreorder">Its only select for pre orders</string>
-
 
     <string name="related">Related Products</string>
 
