--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="add_to_cart">Add to Cart Successfully</string>
-
+    <string name="select_one">Please Select One</string>
+    <string name="wanttoadd">Add this category to wishlist?</string>
     <string name="ok">OK</string>
     <string name="loading">Loading</string>
     <string name="select_quan">Select Quantity</string>
