--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="add_to_cart">Add to Cart Successfully</string>
+    <string name="wanttoadd">Add this category into wishlist?</string>
 
+
+    <string name="select_one">Please Select One</string>
+    <string name="add_to_cart">Add to Cart Successfully</string>
     <string name="ok">OK</string>
     <string name="loading">Loading…</string>
     <string name="select_quan">Select Quantity</string>
@@ -11,7 +14,6 @@
     <string name="add_marker">Set Marker For location</string>
     <string name="tv_note">*Note: The shipping price and time depend on the stores numbers and confirmations.
     </string>
-
     <string name="tv_pro_add_address">Add Delivery Address</string>
     <string name="musthavereedem">You must have 300 points to redeem</string>
     <string name="notavailabe">Not Available</string>
