--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="tax">Tax</string>
+    <string name="price">السعر</string>
+    <string name="detail">Detail</string>
+    <string name="b_total">Total Price</string>
+
+    <string name="b_discount_first">First Order Disc.</string>
+
+    <string name="bill">الفاتورة</string>
     <string name="add_to_cart">Add to Cart Successfully</string>
     <string name="select_one">Please Select One</string>
     <string name="wanttoadd">Add this category to wishlist?</string>
     <string name="ok">OK</string>
+    <string name="delivery_charge_new">Delivery Charges</string>
+
     <string name="loading">Loading</string>
     <string name="select_quan">Select Quantity</string>
     <string name="select_color">Select Color</string>
