--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="b_discount_first">خصم الطلب الأول</string>
 
+    <string name="surety">هل أنت واثق؟</string>
 
     <string name="tax">الضريبة </string>
     <string name="bill">الفاتورة</string>
